No need to create a new instance every time
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/imaging/trunk@1648119 13f79535-47bb-0310-9956-ffa450edef68